some design and updating

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         
         <div class="header_bg container">
             <div class="contend_area">
-                <h1>Welcome To View_World</h1>
+                <h4>"Change your thoughts and change your world."</h4>
                 <p>
                     "The world is so empty if one thinks only of mountains, rivers and cities; but to know someone here and there who thinks and feels with us, and though distant, is close to us in spirit—this makes the earth for us an inhabited garden."</p>
                     <br/>
-                    <h2>-Johann Wolfgang von Goethe</h2>
+                    <h2>- Johann Wolfgang von Goethe</h2>
             </div>
            <div class="img_area">
             <img src="./image/undraw_connected_world_wuay.svg" alt="world_img">
@@ -74,7 +74,7 @@
 
     <footer>
         <div class="container">
-            <h4>@2021 Designing By kawcher-habib</h4>
+            <h4>Copyright © 2021 KH Team</h4>
         </div>
     </footer>
     <!-- footer_area-end -->
