--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./image/fiveIcon.jpg">
     <title>View_World</title>
     <!--bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- custom css -->
-    <link rel="stylesheet" href="./cssFile/style.css">
+    < <link rel="stylesheet" href="./cssFile/style.css">
 
 </head>
 
@@ -18,8 +19,8 @@
     <!--container area-->
     <div class="container">
 
-        <header class="header-area">
-            <div class="content-side">
+        <header class=" d-flex justify-content-center align-items-center p-2">
+            <div class="col-md-4 col-sm-12">
                 <h4>"Change your thoughts and change your world."</h4>
                 <p>
                     "The world is so empty if one thinks only of mountains, rivers and cities; but to know someone
@@ -30,8 +31,8 @@
                 <br />
                 <h2>- Johann Wolfgang von Goethe</h2>
             </div>
-            <div class="map-img-side">
-                <img src="./image/undraw_connected_world_wuay.svg" alt="world_img">
+            <div class="col-md-8 col-sm-12 w-50">
+                <img class="img-fluid w-100" src="./image/undraw_connected_world_wuay.svg" alt="world_img">
 
             </div>
 
@@ -39,48 +40,78 @@
 
         <!-- header_area-end -->
         <!--main area start-->
-        <div class="main-area">
-            <h1>Find Your Country</h1>
-            <div class="nav-bar">
-                <ul>
-                    <li data-value="Europe" data-tab-target=".europe">Europe</li>
-                    <li data-value="Asia" data-tab-target=".Asin">Asia</li>
-                    <li data-value="Africa" data-tab-target=".Africa">Africa</li>
-                    <li data-value="Oceania" data-tab-target=".Oceania">Oceania</li>
-                    <li data-value="America" data-tab-target=".America">America</li>
-
+        <div class="main-area ">
+            <!-- <h1>Find Your Country</h1> -->
+            <div class="nav-bar mt-4">
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Europe</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Asia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Africa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link ">Oceania</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link ">America</a>
+                    </li>
                 </ul>
             </div>
             <!-- list-area-end -->
 
-            <div class="search-box">
-                <input id="inputBox" class="input-box" type="text" placeholder="Enter Country FullName"><button
-                    id="searchBtn">Search</button>
+            <div class="search-box row mt-5 mb-5">
+                <div class="col-md-3 col-sm-12">
+
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="d-flex">
+                        <input id="inputBox" class="form-control me-2" type="text" placeholder="Enter Country FullName"
+                            aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit" id="searchBtn">Search</button>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-12"></div>
+
             </div>
             <!-- search_box-area-end -->
+            <div class="row">
+                <div class="col-md-4 col-sm-12"></div>
+                <div class="col-md-4 col-sm-12 text-center">
+                    <div class="spinner-border m-3 spinner" id="spinner" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12"></div>
+            </div>
 
-            <div class="country-display-area">
+            <div class="country-display-area d-flex flex-wrap justify-content-around h-50">
+
 
             </div>
-            <div class="searchValue">
+            <div class="searchValue mb-5">
 
             </div>
-            <div class="country-details-area">
-                <span id="back"> Back </span>
+            <div class="country-details-area mt-5">
+
             </div>
             <!-- country_display-area-end -->
 
-
-
         </div>
-        <!-- main_area-end -->
 
-        <!-- <footer>
-            <!-- <div class="container">
-                <h4>Copyright © 2021 KH Team</h4>
-            </div> -->
-        <!-- </footer> -->
-        <!-- footer_area-end -->
+        <footer class="mt-4 mb-5">
+            <div class="row">
+                <div class="col-md-4"></div>
+                <div class="col-md-4 col-sm-12">
+                    <button>KH</button>
+                    <h5>Copyright © 2022 kawcher_h.</h5>
+                </div>
+                <div class="col-md-4"></div>
+            </div>
+        </footer>
 
     </div>
     <!--container area end-->
