add new features

--- a/index.html
+++ b/index.html
@@ -88,10 +88,12 @@
                 <div class="col-md-4 col-sm-12"></div>
             </div>
 
-            <div class="country-display-area d-flex flex-wrap justify-content-around h-50">
+            <div class="country-display-area d-flex flex-wrap justify-content-around ">
 
 
             </div>
+            <!--back arrow-->
+            <span class="btn btn-secondary pt-2 d-none" id="back-arrow">&larr;</span>
             <div class="searchValue mb-5">
 
             </div>
